# android-sdk

./: package.xml
AllSamples/: local.properties  settings.gradle
AllSamples/AccelerometerPlay/: build.gradle
AllSamples/gradle/wrapper/: gradle-wrapper.properties
AllSamples/nativeactivity/src/main/cpp/: CMakeLists.txt
AllSamples/samples/: build.gradle
AllSamples/samples/src/main/: AndroidManifest.xml
AllSamples/sdk/: build.gradle
AllSamples/test/src/main/: AndroidManifest.xml
AndroidGpsStatus/: local.properties  settings.gradle
AndroidGpsStatus/gpstest/: build.gradle
AndroidGpsStatus/gpstest/src/main/: AndroidManifest.xml
AndroidGpsStatus/mygps/: build.gradle
AndroidGpsStatus/mygps/src/main/: AndroidManifest.xml
GPSLogger/: local.properties
GPSLogger/app/: .gitignore  build.gradle
GPSLogger/app/src/main/: AndroidManifest.xml
GPSLogger/gradle/wrapper/: gradle-wrapper.properties
SpeedMeter/: local.properties
SpeedMeter/app/: build.gradle
SpeedTracker/: .gitignore  local.properties
TinyTravelTracker/: .gitignore  local.properties
androidjni/: settings.gradle
androidjni/app/: build.gradle
androidjni/app/src/main/: AndroidManifest.xml
androidjni/app/src/main/cpp/: CMakeLists.txt  helloneon-intrinsics.c  helloneon-intrinsics.h  helloneon.c
androidjni/crack/src/main/cpp/: hellojni.c
androidjni/hook/: build.gradle
androidjni/hook/src/main/: AndroidManifest.xml
androidjni/hook/src/main/cpp/: CMakeLists.txt  epoll.c  epoll_arm.c
androidjni/inject/: libhello-jni.txt
androidjni/inject/src/main/cpp/: CMakeLists.txt  inject.h
androidjni/reverse/: build.gradle
androidjni/reverse/src/main/: AndroidManifest.xml
androidjni/reverse/src/main/cpp/: hello-jni.c  hellojni.c
androidjni/vksample/src/main/: AndroidManifest.xml
androidjni/vksample/src/main/cpp/: CMakeLists.txt  android_native_app_glue.c  hellojni.c  instance.cpp  util.cpp  util.hpp  util_init.cpp
androidjni/vktutorials/src/main/: AndroidManifest.xml
androidjni/vktutorials/src/main/cpp/: CMakeLists.txt  FirstWindowVK.cpp  PrebuildLayerVK.cpp  TraceableLayer.cpp  TriangleMain.cpp  TriangleVK.cpp  Tutorial.cpp  TutorialVK.cpp  TutorialVK.h
androidreverse/: gradle.properties  local.properties  settings.gradle
androidreverse/allhook/: build.gradle
androidreverse/allhook/src/main/cpp/: CMakeLists.txt  common.h  my_log.h
androidreverse/allhook/src/main/cpp/ElfHook/: elfhook.cpp  elfio.cpp
androidreverse/allhook/src/main/cpp/JavaHook/: JavaMethodHook.cpp  art_object_4_4.h
androidreverse/allhook/src/main/jni/: Android.mk
androidreverse/androidmk/: build.gradle
androidreverse/androidmk/src/main/: AndroidManifest.xml
androidreverse/androidmk/src/main/jni/: my_log.h  (+5 more)
androidreverse/crack/: build.gradle
androidreverse/crack/src/main/: AndroidManifest.xml
androidreverse/elfhook/: build.gradle
androidreverse/hook/: build.gradle  proguard-rules.pro
androidreverse/hook/src/main/: AndroidManifest.xml
androidreverse/inject/: build.gradle  reverse.txt
androidreverse/inject/src/main/: AndroidManifest.xml
androidreverse/inlinehook/: build.gradle
androidreverse/inlinehook/src/main/: AndroidManifest.xml
androidreverse/reverse/: build.gradle
androidreverse/reverse/src/main/: AndroidManifest.xml
androidreverse/swathook/: build.gradle
androidreverse/zfb/: build.gradle
androidreverse/zfb/src/main/: AndroidManifest.xml
androidsdk/: build.gradle  settings.gradle
androidsdk/cardlayout/: build.gradle
androidsdk/creditsroll/: build.gradle
androidsdk/creditsroll/src/main/: AndroidManifest.xml
androidsdk/flipview/: build.gradle
androidsdk/glowpad/: build.gradle
androidsdk/gradle/wrapper/: gradle-wrapper.properties
androidsdk/legacy/: build.gradle
androidsdk/legacy/src/main/: AndroidManifest.xml
androidsdk/mainapp/: build.gradle
androidsdk/mainapp/src/main/: AndroidManifest.xml
androidsdk/nativeactivity/: build.gradle
androidsdk/nativeactivity/src/main/: AndroidManifest.xml
androidsdk/nineoldandroids/: build.gradle
androidsdk/samples/: build.gradle
androidsdk/samples/src/main/: AndroidManifest.xml
androidsdk/sdk/: build.gradle
androidsdk/sdk/src/main/: AndroidManifest.xml
androidsdk/test/: build.gradle
androidsdk/viewpage/: build.gradle
androidsdk/viewpage/src/main/: AndroidManifest.xml
androidvk/: settings.gradle
androidvk/assimp/: build.gradle
androidvk/assimp/src/main/: AndroidManifest.xml
androidvk/assimp/src/main/cpp/: CMakeLists.txt  jniactivity.c  revision.h
androidvk/assimp/src/main/cpp/code/: ImporterRegistry.cpp  PostStepRegistry.cpp
androidvk/assimp/src/main/cpp/contrib/zlib/: zconf.h.cmakein  zconf.h_back
androidvk/vksample/src/main/cpp/: CMakeLists.txt  my_log.h  util.hpp
androidvk/vktutorials/: build.gradle
androidvk/vktutorials/src/main/: AndroidManifest.xml
androidvk/vulkan/: build.gradle
androidvk/vulkan/src/main/: AndroidManifest.xml
androidvk/vulkan/src/main/cpp/: CMakeLists.txt  Tutorial.cpp  TutorialVK.h  bloom.cpp  vulkan_wrapper.h
androidvk/vulkan/src/main/cpp/assimp/: CMakeLists.txt
androidvk/vulkan/src/main/cpp/assimp/include/assimp/: config.h
androidvk/vulkan/src/main/cpp/base/: VulkanDevice.cpp  VulkanDevice.hpp  VulkanModel.cpp  VulkanModel.hpp  VulkanTextOverlay.hpp  VulkanTexture.cpp  VulkanTexture.hpp  VulkanTools.cpp  keycodes.hpp  vulkanandroid.h  vulkanexamplebase.cpp  vulkanexamplebase.h
androidvk/vulkan/src/main/cpp/src/: bloom.cpp  textoverlay.cpp  texture.cpp  texturecubemap.cpp
bluetooth/: settings.gradle
bluetooth/gradle/wrapper/: gradle-wrapper.properties
gles3jni/: .project  AndroidManifest.xml  AndroidManifest.xml_back.xml
gles3jni/jni/: Android.mk
hello-gl2/: .project
hello-gl2/jni/: Android.mk
hello-jni/: .project
hello-jni/.externalToolBuilders/: ndk_build [Builder].launch
hello-jni/app/: build.gradle
hello-jni/app/src/main/: AndroidManifest.xml
hello-jni/gradle/wrapper/: gradle-wrapper.properties
hello-jni/jni/: hello-jni.c
ndk_dub/: build.gradle
ndk_dub/app/: build.gradle
ndk_dub/app/src/main/: AndroidManifest.xml
(+772 files in other folders)
